# covid-clock

./: default.nix  trends.sql
.obelisk/impl/: github.json
backend/: backend.cabal
backend/src/: Backend.hs  Database.hs
backend/src-bin/: main.hs  tools.hs
common/: common.cabal
common/src/: SEIR.hs
common/src/Common/: Types.hs
common/src/Common/Types/: Place.hs  Report.hs
frontend/: frontend.cabal
frontend/src/: CssClass.hs  Frontend.hs
static/: main.css  template.html
