name: backend
version: 0.1
cabal-version: >= 1.8
build-type: Simple

library
  hs-source-dirs: src
  if impl(ghcjs)
    buildable: False
  build-depends:
      HsOpenSSL
    , base
    , bytestring
    , beam-core               >= 0.8     && < 0.9
    , beam-migrate            >= 0.4     && < 0.5
    , beam-postgres           >= 0.4     && < 0.5
    , cassava
    , common
    , containers
    , frontend
    , http-streams
    , io-streams
    , lens
    , lens-csv
    , obelisk-backend
    , obelisk-route
    , optparse-applicative
    , resource-pool
    , string-conv
    , text
    , time
  exposed-modules:
    Backend
    Database
  ghc-options: -Wall

executable backend
  main-is: main.hs
  hs-source-dirs: src-bin
  if impl(ghcjs)
    buildable: False
  build-depends:
      base
    , backend
    , common
    , frontend
    , obelisk-backend

executable tools
  main-is: tools.hs
  hs-source-dirs: src-bin
  if impl(ghcjs)
    buildable: False
  ghc-options: -threaded
  build-depends:
      base
    , backend
    , common
    , frontend
    , obelisk-backend
    , optparse-applicative
    , resource-pool