name: common
version: 0.1
cabal-version: >= 1.2
build-type: Simple

library
  hs-source-dirs: src
  build-depends:
      aeson
    , base
    , beam-core
    , beam-migrate
    , obelisk-route
    , mtl
    , text
    , time
  exposed-modules:
    Common.Route
    Common.Types
    Common.Types.Place
    Common.Types.Report
    SEIR
